[package]
name = "geo-clipper"
version = "0.6.1-alpha.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2018"
license = "ISC"
readme = "README.md"
repository = "https://github.com/lelongg/geo-clipper"
documentation = "https://docs.rs/geo-clipper/"
description = "Boolean operations on polygons"
keywords = ["geo", "polygon", "boolean", "offset"]
categories = ["algorithms"]

[dependencies]
clipper-sys = {git = "https://github.com/QuentinPerez/clipper-sys.git", branch = "qperez/fix_macos_build"}
geo-types = "0.7.1"
